; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/system/esp_event/user_event_loops/main/extr_main.c_task_iteration_handler.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/system/esp_event/user_event_loops/main/extr_main.c_task_iteration_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@loop_with_task = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [15 x i8] c"loop_with_task\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"loop_without_task\00", align 1
@TAG = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [37 x i8] c"handling %s:%s from %s, iteration %d\00", align 1
@.str.3 = private unnamed_addr constant [21 x i8] c"TASK_ITERATION_EVENT\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32, i8*)* @task_iteration_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @task_iteration_handler(i8* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = bitcast i8* %11 to i32*
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %9, align 4
  %14 = load i8*, i8** %5, align 8
  %15 = load i8*, i8** @loop_with_task, align 8
  %16 = icmp eq i8* %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %4
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8** %10, align 8
  br label %19

18:                                               ; preds = %4
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i8** %10, align 8
  br label %19

19:                                               ; preds = %18, %17
  %20 = load i32, i32* @TAG, align 4
  %21 = load i32, i32* %6, align 4
  %22 = load i8*, i8** %10, align 8
  %23 = load i32, i32* %9, align 4
  %24 = call i32 @ESP_LOGI(i32 %20, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.2, i64 0, i64 0), i32 %21, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.3, i64 0, i64 0), i8* %22, i32 %23)
  ret void
}

declare dso_local i32 @ESP_LOGI(i32, i8*, i32, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
